package ar.edu.utn.frba.dds.model.entities.roles;

public enum Permiso {
  CREARCOLECCION,
  MODIFICARCOLECCION,
  ELIMINARCOLECCION,
  VISITARESTADISTICAS,
  MODIFICARHECHO,
  REVISARHECHO,
  REVISARSOLICITUD,
  SUBIDAARCHIVO
}
